# square-roots-starter

./: README.md
config/: gatorgrade.yml
squareroot/: pyproject.toml
writing/: reflection.md
