[tool.poetry]
name = "squareroot"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
squareroot = "squareroot.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.9.0"
pyinstrument = "^4.0.3"
ruff = "^0.6.5"

[tool.poetry.dev-dependencies]
taskipy = "^1.8.1"
mypy = "^0.910"
pytest = "^7.1.1"
pymarkdownlnt = "^0.9.8"

[tool.taskipy.tasks]
ruff = { cmd = "ruff check --preview --output-format=concise squareroot/main.py", help = "Run the ruff checks for source code format and linting" }
fix = { cmd = "ruff check --fix", help = "Fix the fixable ruff errors in source code format" }
ruffdetails = { cmd = "ruff check --preview", help = "Run the ruff checks for source code format and linting" }
markdownlint = { cmd = "poetry run pymarkdown --config .pymarkdown.cfg scan ../writing/reflection.md ../README.md", help = "Run the markdown linter on writing" }
mypy = { cmd = "poetry run mypy squareroot", help = "Run the mypy type checker for potential type errors" }
all = "task ruff && task markdownlint && task mypy && task test"
test = { cmd = "pytest -x -s", help = "Run the pytest test suite" }
test-silent = { cmd = "pytest -x --show-capture=no", help = "Run the pytest test suite without showing output" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
